RESOLVED FIXED129685
[GStreamer] WebSource doesn't need the "iradio-mode" property
https://bugs.webkit.org/show_bug.cgi?id=129685
Summary [GStreamer] WebSource doesn't need the "iradio-mode" property
Andres Gomez Garcia
Reported 2014-03-04 08:53:13 PST
As we have been discussing at https://bugzilla.gnome.org/show_bug.cgi?id=725383 , the "iradio-mode" property was intended to be automatically set by "uridecodebin". For quite some time, this was not happening and now we are removing this automatic mechanism since it doesn't bring any advantage. The "iradio-mode" property is a private property that was not even exposed so it could only be set by the playbin through the uridecodebin. Let's sent always the "icy-metadata" header and remove the code from this property.
Attachments
Patch (4.29 KB, patch)
2014-03-05 05:43 PST, Andres Gomez Garcia
no flags
Andres Gomez Garcia
Comment 1 2014-03-05 05:43:58 PST
WebKit Commit Bot
Comment 2 2014-03-05 06:43:22 PST
Comment on attachment 225876 [details] Patch Clearing flags on attachment: 225876 Committed r165106: <http://trac.webkit.org/changeset/165106>
WebKit Commit Bot
Comment 3 2014-03-05 06:43:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.